# TramwayCollector

./: .gitignore  NOTICE  PRIVACY  README.md  buildozer.spec  generate_reports.sh  main.kv  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
data/: .gitignore
resources/kivy/: collection.kv  extended_style.kv  gallery.kv  image_edition.kv  menu.kv  settings.kv
resources/languages/: english.json  french.json  german.json  italian.json  japanese.json  spanish.json
screens/: __init__.py  collection_window.py  components.py  gallery_window.py  image_edition_window.py  menu_window.py  settings_window.py
test/: test_tools_collection.py  test_tools_image.py
tools/: __init__.py  tools.py  tools_collection.py  tools_image.py  tools_kivy.py
