[build-system]
requires = ["Pillow==9.5.0", "Kivy==2.1.0"]
build-backend = "buildozer"

[tool.pylint]
recursive= "y"
load-plugins = "pylint_report"
ignore-patterns = ["draft*",".buildozer"]
disable = ["wrong-import-position",
    "useless-parent-delegation",
    "no-member",
    "no-name-in-module"]

    [tool.pylint.basic]
    # Add names that will always be accepted by pylint
    good-names = ["i", "j", "k", "x", "y", "_"]

    # [tool.pylint.imports]
    # import-graph= "imports_all.png"

    # [tool.pylint.reports]
    # output-format = "pylint_report.CustomJsonReporter"
    # reports = "y"
    # output-format = "text"

    # [tool.pylint.options]
    # output-format = "pylint_report.CustomJsonReporter"


# [tool.pytest.ini_options]
# addopts = "--ignore=.buildozer --cov-report html:reports/coverage --cov-report xml --cov"
